# bioengine

./: .gitignore  Dockerfile  MANIFEST.in  README.md  hypha-services-manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-conda.yml  build-container.yml  build.yml  publish.yml
apps/cellpose/cellpose-train/1/: test_cellpose_train.py
apps/imagej/: main.py  manifest.yaml  run_imagej.py
bioengine/: __init__.py  __main__.py  app_loader.py
bioengine/services/cellpose/: README.md  __init__.py
bioengine/services/cellpose/train/: config.pbtxt
bioengine/services/http-file-server/: __init__.py
bioimageio/apps/cellpose/: main.py
bioimageio/apps/imagej/: manifest.yaml
bioimageio/engine/: __init__.py  __main__.py  app_loader.py  load_ray_apps.py  ray_app_loader.py  ray_app_manager.py
bioimageio/engine/apps/cellpose/: manifest.yaml
bioimageio/engine/apps/imagej/: run_imagej.py
bioimageio/engine/ray_apps/: cellpose.py  translator.py
docs/: README.md  _sidebar.md  api.md  bioengine-apps.md  bioengine-hpc-worker.md  index.html  k8s-toolkit.md  tutorial-bioengine-apps.md
environments/: cellpose-triton-gpu-py310.yml  pyimagej-py310.yml
environments/bioengine/: Dockerfile
environments/generic-hypha-app/: Dockerfile
notebooks/: 1-bioengine-engine-tutorial.ipynb  2-bioengine-model-training.ipynb  3-kaibu-geojson.ipynb  4-kaibu-interactive-training.ipynb  bioengine-tutorial-embl-2024.ipynb  bioengine-workshop-I2K-2024.ipynb  embl-bioengine-tutorial-1.ipynb
slides/: i2k-2023-bioengine-workshop.md
tests/: test_micro_sam.py
(+15 files in other folders)
