[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "bioimageio.engine"
version = "0.1.3"
readme = "README.md"
description = "BioEngine: Your AI Engine for Advanced BioImage Analysis"
dependencies = [
  "hypha[s3]>=0.20.31",
  "hypha-rpc",
  "PyYAML",
  "hypha-launcher>=0.1.3",
  "pyotritonclient",
  "simpervisor",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bioimageio*"]
exclude = ["tests*", "scripts*"]
